--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,213 @@
-h2 {
-	font-family: "Lucida Console", Monaco, monospace;
-	text-align: center;
-}
+	* {
+		box-sizing: border-box;
+	}
+	body{
 
-p {
-	width: 90%;
-	margin-right: auto;
-	margin-left: auto;
-	font-family: Helvetice;
-	color: black;
-}
+	}
+	h2 {
+		margin-top: 50px;
+		margin-bottom: 50px;
+		font-family: 'Balsamiq Sans', cursive;
+		text-align: center;
+	}
+	p {
+		border: : 1px solid black;
+		/*background-color:  #A52A2A;*/
+		width: 90%;
+		height: 100px;
+		margin-right: auto;
+		margin-left: auto;
+		margin-top: 45px;
+		font-family: 'Balsamiq Sans', cursive;
+		color: black;
+		font-size: 13px;
+	}
+	.lebel01{
+		margin-top: 6px;
+		font-family: 'Balsamiq Sans', cursive;
+		color: black;
+	}
+	.lebel03{
+		margin-top: 6px;
+		font-family: 'Balsamiq Sans', cursive;
+		color: black;
+	}
+	.lebel02{
+		margin-top: 6px;
+		font-family: 'Balsamiq Sans', cursive;
+		color: white;
+	}
+	.bottomp{
+	   	width: 35%;
+	   	height:35px;
+	   	background: #D59898;
+	   font-family: 'Balsamiq Sans', cursive;
+	   	border-left: 2px solid black;
+	   	border-bottom: 2px solid black;
+	   	text-align:center;
+	   	float: right;
+	}
+	.bottomp1{
+	   	width: 35%;
+	   	height:35px;
+	   	background: #C14543;
+	   	font-family: 'Balsamiq Sans', cursive;
+	   	border-left: 2px solid black;
+	   	border-bottom: 2px solid black;
+	   	text-align:center;
+	   	float: right;
+	}
+	.bottomp2{
+	   	width: 35%;
+	   	height:35px;
+	   	background: #E5D198;
+	   	font-family: 'Balsamiq Sans', cursive;
+	   	border-left: 2px solid black;
+	   	border-bottom: 2px solid black;
+	   	text-align:center;
+	   	float: right;
+	}
 
-.container{
-    width: 100%;
-}
+	.row {
+		width: 100%;
+	}
+	.row2 {
+		
+	}
+	.class1{
+		background-color: #999999;
+		border: 2px solid black;
+	}
+	.class2{
+		background-color: #999999;
+		border: 2px solid black;
+	}
+	.class3{
+		background-color: #999999;
+		border: 2px solid black;
+	}
 
-.container ul li{
-    float:left;
-    list-style: none;
-    width:27%;
-    height:300px;
-    background: #999999;
-    margin :20px 0px 20px 55px; 
-    border:2px solid black;
-    box-sizing: border-box;
-}
+	@media (min-width: 992px){
+		.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+			float: left;
+		}
+		.col-lg-1{
+			width: 8.33%;
+		}
+		.col-lg-2{
+			width: 16.66%;
+		}
+		.col-lg-3{
+			width: 30.7%;
+			margin-left: 25px;
+		}
+		.col-lg-4{
+			width: 33%;
+		}
+		.col-lg-5{
+			width: 41.66%;
+		}
+		.col-lg-6{
+			width: 50%;
+		}
+		.col-lg-7{
+			width: 58.33%;
+		}
+		.col-lg-8{
+			width: 66.66%;
+		}
+		.col-lg-9{
+			width: 74.99%;
+		}
+		.col-lg-10{
+			width: 83.33%;
+		}
+		.col-lg-11{
+			width: 91.66%;
+		}
+		.col-lg-12{
+			width: 100%;
+		}
 
-.container ul li .bottom{
-    width: 100%;
-    height:50px;
-    color:black;
-    font-size: 15px;
-   
-}
+	}
 
-.bottomp{
-    width: 50%;
-    height:50px;
-   background: #D59898;
-   font-family: "Lucida Console", Monaco, monospace;
-   border:2px solid black;
-   text-align:center;
-   float: right;
-}
+@media (min-width: 768px) and (max-width: 991px){
+		.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+			float: left;
+			
+		}
+		.col-md-1{
+			width: 8.33%;
+		}
+		.col-md-2{
+			width: 16.66%;
+		}
+		.col-md-3{
+			width: 25%;
+		}
+		.col-md-4{
+			width: 33%;
+		}
+		.col-md-5{
+			width: 41.66%;
+		}
+		.col-md-6{
+			width: 46%;
+			margin-left: 25px;
+		}
+		.col-md-7{
+			width: 58.33%;
+		}
+		.col-md-8{
+			width: 66.66%;
+		}
+		.col-md-9{
+			width: 74.99%;
+		}
+		.col-md-10{
+			width: 83.33%;
+		}
+		.col-md-11{
+			width: 94.9%;
+			margin-left: 25px;
+			margin-top: 20px;
+		}
+		.col-md-12{
+			width: 100%;		
+		}
+		.bottomp2{
+		   	width: 16.7%;
+		   	height:35px;
+		   	background: #E5D198;
+		   	font-family: "Lucida Console", Monaco, monospace;
+		   	border-left: 2px solid black;
+		   	border-bottom: 2px solid black;
+		   	text-align:center;
+		   	float: right;
 
-.bottomp2{
-    width: 50%;
-    height:50px;
-    font-family: "Lucida Console", Monaco, monospace;
-   background: #C14543;
-   border:2px solid black;   
-   text-align:center;
-   float: right;
-}
 
-.bottomp3{
-    width: 50%;
-    height:50px;
-    font-family: "Lucida Console", Monaco, monospace;
-   background: #E5D198;
-   border:2px solid black;
-   text-align:center;
-   float: right;
-}
+		}
+	
 
-@media screen and (max-width:1250px){
-    .container ul li{
-        width:40%;
-        margin-left: 40px;
-         
-    }
+	}
+
+	@media (max-width: 767px){
+		.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+	
+		}
+		.col-md-6{
+			width: 66%;
+			margin-right: auto;
+			margin-left: auto;
+			margin-top: 20px;
+		}
+		
+		.col-md-11{
+			width: 66%;
+			margin-right: auto;
+			margin-left: auto;
+			margin-top: 20px;
+		}
+		
+
+	}
